<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:hint="@string/prompt_username"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="51dp"
        android:onClick="CreateAccount"
        android:text="@string/create_account" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="51dp"
        android:text="@string/login"
        android:onClick="Login"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="28dp"
        android:text="@string/test_login_checkbox"
        android:checked="false" />
</RelativeLayout>